This pr fixesoverflow  #2850

--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -543,32 +543,8 @@ input[type="password"]::-ms-reveal {
   border: #d26d6d 2px solid;
 }
 
-#translateButton {
-  position: fixed;
-  bottom: 15px;
-  right: 40px;
-  z-index: 1000;
-  width: 53px;
-  height: 53px;
-  border-radius: 50%;
-  border: none;
-  background: linear-gradient(hwb(357 6% 36%), #d26d6d);
-  color: white;
-  text-align: center;
-  display: inline-block;
-  font-size: 16px;
-  cursor: pointer;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 12px;
-  line-height: 1;
-  text-align: center;
-  white-space: nowrap;
-  transition: transform 0.3s ease;
-  margin-top: 76.5vh;
-  margin-right: 0px;
-}
+
+
 
 /* Media queries for responsiveness */
 @media (max-width: 768px) {
